Fixing broken anchor links on Centre Info page

--- a/app/views/centre_info/_getting_here.html.erb
+++ b/app/views/centre_info/_getting_here.html.erb
@@ -16,8 +16,8 @@
 <% end %>
 
 <%# Getting here %>
-<section aria-labelledby="info-getting-here" class="mrg-dbl-alt">
-  <h2 id="info-getting-here">Getting Here</h2>
+<section aria-labelledby="getting-here" class="mrg-dbl-alt">
+  <h2 id="getting-here">Getting Here</h2>
 
   <%# Shopping centre map %>
   <div class="mrg-base-alt">
