--- a/app/views/centre_info/_notices.html.erb
+++ b/app/views/centre_info/_notices.html.erb
@@ -1,6 +1,6 @@
 <%# Notices %>
-<section aria-labelledby="info-notices" class="mrg-dbl-alt">
-  <h2 id="info-notices">Notices</h2>
+<section aria-labelledby="notices" class="mrg-dbl-alt">
+  <h2 id="notices">Notices</h2>
 
   <div class="grid grid--gutter-dbl">
     <div class="grid__item non-palm-one-whole">
