--- a/app/views/centre_info/_parking.html.erb
+++ b/app/views/centre_info/_parking.html.erb
@@ -1,5 +1,5 @@
-<section aria-labelledby="info-parking" class="mrg-dbl-alt">
-  <h2 id="info-parking">Parking</h2>
+<section aria-labelledby="parking" class="mrg-dbl-alt">
+  <h2 id="parking">Parking</h2>
 
   <% if @parking.rates_apply? %>
     <% if @parking.type_of_rate == 'hourly_rate' %>
