--- a/app/views/centre_info/_social_media.html.erb
+++ b/app/views/centre_info/_social_media.html.erb
@@ -1,8 +1,8 @@
 <%# Follow Us - list of social media %>
 <% if social_media.present? %>
-<section aria-labelledby="info-follow-us">
+<section aria-labelledby="follow-us">
   <div class="txt-formatted">
-    <h2 id="info-follow-us" class="mrg-base">Follow Us</h2>
+    <h2 id="follow-us" class="mrg-base">Follow Us</h2>
   </div>
   <ul class="grid grid--mrg-base-non-palm grid--non-linear">
     <%# Facebook %>
