Revert "Merge pull request #721 from ldewey/social_shares"
This reverts commit 9c99503a6a004a11fbc015b0f4e419e87a0cdf6d, reversing
changes made to 4adb70a6646963b29bfae56a19379cc44b4ab1d6.

--- a/app/views/layouts/detail_view.html.erb
+++ b/app/views/layouts/detail_view.html.erb
@@ -10,7 +10,8 @@
 
   <% unless meta.hide_social_share %>
     <div class="detail-view__controls detail-view__divider">
-      <%= render "/shared/social_share", kind: meta.kind, id: meta.id %>
+      <%= render "/shared/social_share", url: current_url, title: meta.title, twitter_title: meta.twitter_title, email_body: meta.email_body, image: meta.image %>
+
       <% if in_lightbox? %>
         <button type="button" class="btn"><span class="icon icon--close-sml icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Close</span></button>
       <% end %>
