--- a/app/views/layouts/_tile.html.erb
+++ b/app/views/layouts/_tile.html.erb
@@ -6,4 +6,8 @@
 
   <%= link_to yield, tile_url(@centre, result), target: "_self" %>
 
+  <div class="tile__controls js-tile-controls">
+    <%= render "/shared/social_share", kind: result.kind, id: result.id %>
+  </div>
+
 </article>
