--- a/app/views/shared/_social_share.html.erb
+++ b/app/views/shared/_social_share.html.erb
@@ -1,50 +1,16 @@
-<% uuid = SecureRandom.uuid %>
+<div class="social-share drop-down-container js-social-share" data-url="<%= tile_social_share_url(@centre, kind, id) %>" aria-live="polite" aria-atomic="true">
 
-<div class="social-share drop-down-container">
-
-  <button type="button" class="social-share__trigger controls__btn btn" toggle-visibility="social-share-<%= uuid %>">
+  <button type="button" class="social-share__trigger controls__btn btn js-social-share-trigger" aria-haspopup="true">
+    <%# Preloader %>
+    <span class="preloader">
+      <span class="preloader__spinner"></span>
+      <em>Loading&#8230;</em>
+    </span>
+    <%# //Preloader %>
     <span class="icon icon--share icon--lrg icon--spacing-lrg drop-down-container__non-active" aria-hidden="true"></span><!--
     --><span class="drop-down-container__non-active social-share__trigger__txt">Share</span><!--
     --><span class="icon icon--close-lrg icon--lrg icon--spacing-lrg drop-down-container__active" aria-hidden="true"></span><!--
     --><span class="drop-down-container__active social-share__trigger__txt">Close</span>
   </button>
-
-  <%# Social share %>
-  <ul class="drop-down horiz-list horiz-list--fit horiz-list--center" id="social-share-<%= uuid %>">
-
-    <%# Facebook %>
-    <li class="social-share__facebook">
-      <a href="http://www.facebook.com/sharer/sharer.php?u=<%=URI::encode url %>&t=<%=URI::encode title %> <%=URI::encode "at #{@centre.name}" if @centre.present? %>" rel="external" target="_blank"><span class="icon icon--facebook icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Facebook</span></a>
-    </li>
-    <%# //Facebook %>
-
-    <%# Twitter %>
-    <li class="social-share__twitter">
-      <a href="http://twitter.com/intent/tweet?url=<%=URI::encode url %>&text=<%= URI::encode twitter_title || title %> via @WestfieldAU" rel="external" target="_blank"><span class="icon icon--twitter icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Twitter</span></a>
-    </li>
-    <%# //Twitter %>
-
-    <%# Google+ %>
-    <li class="social-share__google">
-      <a href="https://plus.google.com/share?url=<%=URI::encode url %>" rel="external" target="_blank"><span class="icon icon--google-plus icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Google+</span></a>
-    </li>
-    <%# //Google+ %>
-
-    <% if defined?(image) && !image.blank? %>
-      <%# Pinterest %>
-      <li class="social-share__pinterest">
-        <a href="http://pinterest.com/pin/create/button/?url=<%=URI::encode url %>&media=<%=URI::encode image %>&description=<%=URI::encode title %> <%=URI::encode "at #{@centre.name}" if @centre.present? %>" rel="external" target="_blank"><span class="icon icon--pinterest icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Pinterest</span></a>
-      </li>
-      <%# //Pinterest %>
-    <% end -%>
-
-    <%# Email %>
-    <li class="social-share__email">
-      <a href="mailto:?<%=URI::encode "subject=Look what I found at Westfield&body=I would like to share this #{email_body || ''} from Westfield with you. What do you think?\n\n#{title}" %> <%=URI::encode "at #{@centre.name}" if @centre.present? %><%=URI::encode "\n\n#{url}" %>"><span class="icon icon--email icon--xlrg icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Email</span></a>
-    </li>
-    <%# //Email %>
-
-  </ul>
-  <%# //Social share %>
 
 </div>
