--- a/app/assets/stylesheets/partials/utils/_vars.scss
+++ b/app/assets/stylesheets/partials/utils/_vars.scss
@@ -175,6 +175,9 @@ $page-container-max-width: 1600 !default;
 
 $page-container-max-width-narrow: 980 !default;
 
+/* Page container gutter */
+$page-container-gutter: 4% !default;
+
 /* --Grid-- */
 
 /* Gutter */
