Fixing grammar issue

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -172,7 +172,7 @@
 			<%# 'Artist impression' disclaimer %>
 			<% if header_disclaimer? @centre.code %>
 				<div class="header-disclaimer container container--position">
-					<small>Artist impression<span class="hide-visually"> of Westfield centre</span></small>
+					<small>Artist's impression<span class="hide-visually"> of Westfield centre</span></small>
 				</div>
 			<%- end -%>
 			<%# //'Artist impression' disclaimer %>
