Added basic smoke tests

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -37,7 +37,7 @@
           <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter">
 
             <%# Movie tile %>
-            <article class="tile box" role="article">
+            <article class="tile box test-movie" role="article">
               <a href="<%= centre_movie_path(centre_id: @centre.code, id: movie.id, movie_name: movie.title.to_slug) %>">
                 <div class="tile__image">
                   <% if movie.cloudinary_public_id %>
