--- a/app/views/layouts/_tile.html.erb
+++ b/app/views/layouts/_tile.html.erb
@@ -1,4 +1,4 @@
-<article class="tile tile--<%= result.kind.pluralize %> box js-tile" role="article">
+<article class="tile tile--<%= result.kind.pluralize %> box js-tile test-tile" role="article">
 
   <% unless params[:controller] == result.kind.pluralize %>
     <em class="hide-visually"><%= result.kind.titlecase %></em>
