--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -115,7 +115,7 @@
               <div class="stores-list__inner container">
 
                 <%# Store name %>
-                <div class="stores-list__store-name">
+                <div class="stores-list__store-name test-store">
                   <strong><%= link_to store.name, (centre_store_url @centre.code, store.retailer_code, store.id), class: 'js-pjax-link-stores' %></strong>
                   <%# Phone no %>
                   <span class="hide-fully--palm"><span class="hide-visually">Call store: </span><%= phone_format store.phone_number %></span>
