Adding 'in store' to the gift card notification on storefront - WSF-6046

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -79,7 +79,7 @@
                 <%- if @store.accepts_giftcards.present? %>
                   <dt class="hide-visually">Westfield gift card</dt>
                   <dd>
-                    Gift card accepted
+                    Gift card accepted in store
                     <span class="icon icon--gift-card icon--xlrg icon--fixed-width" aria-hidden="true"></span>
                   </dd>
                 <%- end %>
