--- a/app/assets/stylesheets/partials/modules/_social-share.scss
+++ b/app/assets/stylesheets/partials/modules/_social-share.scss
@@ -10,7 +10,7 @@
 		Style Guide -> Modules -> Social Share
 */
 
-/* Set vairables */
+/* Set variables */
 $share-facebook: #355f9f !default;
 $share-twitter: #2ba9e1 !default;
 $share-email: #f4801f !default;
