--- a/app/assets/stylesheets/partials/forms/_validation.scss
+++ b/app/assets/stylesheets/partials/forms/_validation.scss
@@ -15,23 +15,23 @@
 
 /* Error */
 .input-error {
-	border-color: #c43c35 !important;
+	border-color: $color-feedback-error-border !important;
 
 	/* Focus state */
 	&:focus {
 		box-shadow:	inset 0 1px 3px rgba(#000, 0.1),
-								0 0 10px rgba(#c43c35, 0.75) !important;
+								0 0 10px rgba($color-feedback-error-border, 0.75) !important;
 	}
 }
 
 /* Success */
 .input-success {
-	border-color: #57a957 !important;
+	border-color: $color-feedback-success-border !important;
 	background-color: $color-feedback-success-light !important;
 
 	/* Focus state */
 	&:focus {
 		box-shadow:	inset 0 1px 3px rgba(#000, 0.1),
-								0 0 10px rgba(#57a957, 0.75) !important;
+								0 0 10px rgba($color-feedback-success-border, 0.75) !important;
 	}
 }
