Added Campaigns with section_nav

--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -1,3 +1,7 @@
+<% content_for :section_nav do %>
+  <%= render 'section_nav' %>
+<% end %>
+
 <h1 class="hide-visually">Deals</h1>
 
 <% if @deals.blank? %>
