--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -24,10 +24,10 @@
       <div class="pager__inner">
         <em class="pager__count">
           <span class="hide-visually">Page </span>
-          <%= @pagination[:page] %> of <%= @pagination[:page_count] %>
+          <%= @search.page %> of <%= @search.page_count %>
         </em>
         <%# Previous page %>
-        <% if @pagination[:page] > 1 %>
+        <% if @search.page > 1 %>
           <%= link_to prev_page_url, { rel: 'prev', class: 'pager__prev btn btn--pointer btn--pointer-alt btn--main btn--main-white '} do %>
             <span class="icon icon--arrow-left-big btn--pointer__icon btn--pointer__icon--flush" aria-hidden="true"></span>
             Prev
@@ -35,7 +35,7 @@
         <% end %>
         <%# //Previous page %>
         <%# Next page %>
-        <% if @pagination[:page] < @pagination[:page_count] %>
+        <% if @search.page < @search.page_count %>
           <%= link_to next_page_url, { rel: 'next', class: 'pager__next btn btn--pointer btn--main btn--main-white'} do %>
             Next
             <span class="icon icon--arrow-right-big btn--pointer__icon btn--pointer__icon--flush" aria-hidden="true"></span>
