--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -22,11 +22,14 @@
   <% if @search.products.present? %>
     <nav class="pager pager--pin-board" role="navigation" aria-label="Product pagination">
       <div class="pager__inner">
-        <em class="pager__count"><span class="hide-visually">Page </span><%= @pagination[:page] %> of <%= @pagination[:page_count] %></em>
+        <em class="pager__count">
+          <span class="hide-visually">Page </span>
+          <%= @pagination[:page] %> of <%= @pagination[:page_count] %>
+        </em>
         <%# Previous page %>
         <% if @pagination[:page] > 1 %>
           <%= link_to prev_page_url, { rel: 'prev', class: 'pager__prev btn btn--main btn--main-alt4 btn--pointer btn--pointer-alt'} do %>
-            <span class="icon icon--arrow-left btn--pointer__icon btn--pointer__icon--flush" aria-hidden="true"></span>
+            <span class="icon icon--arrow-left-big btn--pointer__icon btn--pointer__icon--flush" aria-hidden="true"></span>
             Prev
           <% end %>
         <% end %>
@@ -35,7 +38,7 @@
         <% if @pagination[:page] < @pagination[:page_count] %>
           <%= link_to next_page_url, { rel: 'next', class: 'pager__next btn btn--main btn--main-alt4 btn--pointer'} do %>
             Next
-            <span class="icon icon--arrow-right btn--pointer__icon btn--pointer__icon--flush" aria-hidden="true"></span>
+            <span class="icon icon--arrow-right-big btn--pointer__icon btn--pointer__icon--flush" aria-hidden="true"></span>
           <% end %>
         <% end %>
         <%# //Next page %>
