--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -50,8 +50,8 @@
               </li><!--
 
               --><li>
-                <label for="gift-card-toggle" class="btn btn--main btn--main-alt2 btn--checkbox-toggle btn--checkbox-toggle-icon">
-                  <input id="gift-card-toggle" type="checkbox" class="btn--checkbox-toggle__input"><span class="btn--checkbox-toggle__lbl"><span class="hide-visually">Westfield </span>Gift Card<span class="hide-visually"> accepted</span><span aria-hidden="true" class="icon icon--gift-card icon--xlrg icon--flush-top-mozilla"></span></span>
+                <label for="gift-card-toggle" class="btn btn--main btn--main-alt2 btn--main-checkbox-toggle btn--main-checkbox-toggle-icon">
+                  <input id="gift-card-toggle" type="checkbox" class="btn--main-checkbox-toggle__input"><span class="btn--main-checkbox-toggle__lbl"><span class="hide-visually">Westfield </span>Gift Card<span class="hide-visually"> accepted</span><span aria-hidden="true" class="icon icon--gift-card icon--xlrg icon--flush-top-mozilla"></span></span>
                 </label>
               </li>
 
