--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -23,7 +23,7 @@
     <%# Contact store %>
     <div class="island-sides islet-ends island--fill island--center">
       <span class="hide-fully--non-palm">
-        <%= phone_link @store.phone_number, class: 'btn btn--full btn--main btn--main-alt2 btn--main-lrg' do |phone_number| %>
+        <%= phone_link @store.phone_number, class: 'btn btn--full btn--main btn--main-dark btn--main-lrg' do |phone_number| %>
           <span class="icon icon--phone icon--xlrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span><strong>Call <%= @store.name %></strong>
         <% end %>
       </span>
