--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -61,7 +61,7 @@
           <%# Contact store %>
           <div class="detail-view__divider island-sides islet-ends island--fill island--center">
             <span class="hide-fully--non-palm">
-              <%= phone_link store_phone_number(@centre_stores, @product.retail_chain), class: 'btn btn--full btn--main btn--main-alt2 btn--main-lrg' do |phone_number| %>
+              <%= phone_link store_phone_number(@centre_stores, @product.retail_chain), class: 'btn btn--full btn--main btn--main-dark btn--main-lrg' do |phone_number| %>
                 <span class="icon icon--phone icon--xlrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span><strong>Call <%= @product.retail_chain_name %></strong>
               <% end %>
             </span>
@@ -78,7 +78,7 @@
         <%- if @product.primary_retailer_product_url -%>
           <div class="island island--center detail-view__divider--palm">
             <%= link_to @product_redirection_url, target: "_blank",
-              class: "btn btn--pointer btn--full btn--full-left btn--main btn--main-alt2 btn--main-lrg btn--main-flanked js-redirect", rel: "external nofollow" do %>
+              class: "btn btn--pointer btn--full btn--full-left btn--main btn--main-dark btn--main-lrg btn--main-flanked js-redirect", rel: "external nofollow" do %>
               <span class="txt-truncate">Buy from <%= @product.retail_chain_name %></span>
               <span class="icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true"></span>
               <span class="icon icon--bag icon--xlrg icon--flush-top btn--pointer__icon" aria-hidden="true"></span>
