--- a/app/views/centre_service_details/show.html.erb
+++ b/app/views/centre_service_details/show.html.erb
@@ -68,7 +68,7 @@
             <%# Temp fix %>
             <div class="grid">
               <div class="grid__item one-whole non-palm-two-fifths">
-                <a href="http://www.westfieldgiftcards.com.au/" rel="external" target="_target" class="btn btn--main btn--main-blue btn--full">Buy Now</a>
+                <a href="http://www.westfieldgiftcards.com.au/" rel="external" target="_target" class="btn btn--full btn--main btn--main-blue">Buy Now</a>
               </div>
             </div>
             <%# //Temp fix %>
@@ -76,7 +76,7 @@
             <%# Uncomment when gift card filter is done %>
             <%#<div class="grid grid--gutter-half grid--table-non-palm">
               <div class="grid__item one-whole non-palm-two-fifths">
-                <a href="http://www.westfieldgiftcards.com.au/" rel="external" target="_target" class="btn btn--main btn--main-blue btn--full">Buy Now</a>
+                <a href="http://www.westfieldgiftcards.com.au/" rel="external" target="_target" class="btn btn--full btn--main btn--main-blue">Buy Now</a>
               </div>%>
               <%#<div class="grid__item one-whole non-palm-three-fifths">%>
                 <%#or%> <%#= link_to 'redeem at these stores', '#' %>
