--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -28,7 +28,7 @@
         </em>
         <%# Previous page %>
         <% if @pagination[:page] > 1 %>
-          <%= link_to prev_page_url, { rel: 'prev', class: 'pager__prev btn btn--main btn--main-white btn--pointer btn--pointer-alt'} do %>
+          <%= link_to prev_page_url, { rel: 'prev', class: 'pager__prev btn btn--pointer btn--pointer-alt btn--main btn--main-white '} do %>
             <span class="icon icon--arrow-left-big btn--pointer__icon btn--pointer__icon--flush" aria-hidden="true"></span>
             Prev
           <% end %>
@@ -36,7 +36,7 @@
         <%# //Previous page %>
         <%# Next page %>
         <% if @pagination[:page] < @pagination[:page_count] %>
-          <%= link_to next_page_url, { rel: 'next', class: 'pager__next btn btn--main btn--main-white btn--pointer'} do %>
+          <%= link_to next_page_url, { rel: 'next', class: 'pager__next btn btn--pointer btn--main btn--main-white'} do %>
             Next
             <span class="icon icon--arrow-right-big btn--pointer__icon btn--pointer__icon--flush" aria-hidden="true"></span>
           <% end %>
